fix: toolbar/outline visibility for nested group fields

--- a/assets/sass/editor/_field.scss
+++ b/assets/sass/editor/_field.scss
@@ -25,7 +25,7 @@
 
 	&--active {
 		--outline: var(--color-primary);
-		outline: 1px solid var(--color-primary);
+		outline: 1px solid var(--color-primary) !important;
 		z-index: 2;
 	}
 
